# fuzzd

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RESEARCH.md  SECURITY.md
.claude/commands/: add-signal.md  docs-update.md  release-prep.md  roadmap-research.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  corpus_record.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench/: README.md  clean_tools.json  mcptox_actual.json  mcptox_representative.json  regenerate_actual.py  run.sh  scan_registry.py
corpus/rug_pull/: RUG-001.json  RUG-002.json  RUG-003.json
corpus/tool_poisoning/: TPA-001.json  TPA-002.json  TPA-003.json  TPA-004.json  TPA-005.json  TPA-006.json  TPA-007.json  TPA-008.json  TPA-009.json  TPA-010.json  TPA-011.json  TPA-012.json  TPA-013.json  TPA-014.json  TPA-015.json  TPA-016.json  TPA-017.json  TPA-018.json  TPA-019.json  TPA-020.json  TPA-021.json  TPA-022.json  TPA-023.json
corpus/tool_shadowing/: TS-001.json  TS-002.json  TS-003.json
demo/: README.md  github-actions.yml  run.sh
demo/servers/: clean.json  poisoned.json
src/: config.rs  main.rs  suppress.rs  testutil.rs  utils.rs
src/analyzer/: mod.rs  sequence.rs  severity.rs  signals.rs
src/cli/: mod.rs
src/corpus/: loader.rs  mod.rs  schema.rs
src/fuzzer/: argument.rs  chain.rs  description.rs  escape.rs  mod.rs  payloads.rs  peer.rs  protocol.rs  response.rs  tfidf.rs
src/protocol/: mcp.rs  mod.rs  session.rs
src/protocol/transport/: http.rs  mod.rs  stdio.rs
src/reporter/: mod.rs
src/runner/: harness.rs  mod.rs  observer.rs
tests/: audit_stdio.rs  scan_cli.rs
tests/common/: mod.rs
tests/fixtures/: chain_clean.json  chain_credential_exfil.json  clean_tools.json  reference_server.rs  vulnerable_tools.json
